# openenv-workplace

./: .gitignore  Dockerfile  README.md  email_reader.py  email_to_task.py  env.py  grader.py  inference.py  interface.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  response_generator.py  tasks.py  test_email.py
server/: app.py
workplace-decision-engine/: Dockerfile  README.md  baseline.py  env.py  grader.py  inference.py  main.py  models.py  openenv.yaml  response_generator.py  tasks.py
